--- a/css/结果.less
+++ b/css/结果.less
@@ -152,7 +152,14 @@ footer
 			width: 45%;
 			text-align: center;
 			display: block;
-			
+			a
+			{
+				color: #ffffff;
+			}
+			a:hover
+			{
+				text-decoration: none;
+			}
 		}
 		.button-again
 		{
